--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,9 +1,20 @@
+
+:root {
+  --body-color: #fff;
+  --body-back-color: #000;
+  --font-color: #000;
+  --info-font-color: #000;
+  --art-font-color: #fdfdfd;
+}
+
 html,
 body {
   padding: 0;
   margin: 0;
   font-size: 14px;
   font-family: Walfork,Walsheim,Helvetica Neue,Helvetica,Arial,sans-serif;
+  color: var(--body-color);
+  background: var(--body-back-color);
 }
 
 a {
@@ -14,12 +25,20 @@ a {
   box-sizing: border-box;
 }
 
-@media (prefers-color-scheme: dark) {
-  html {
-    color-scheme: dark;
-  }
-  body {
-    color: white;
-    background: black;
-  }
+[data-theme="dark"] {
+  --body-color: #fff;
+  --body-back-color: #000;
+  --font-color: white;
+  --art-font-color: #fdfdfd;
+  --info-font-color: #ffffffd4;
+  --alert-font-color: black;
+}
+
+[data-theme="light"] {
+  --body-color: #000;
+  --body-back-color: #fff;
+  --font-color: black;
+  --art-font-color: #2b2b2b;
+  --info-font-color: #00000073;
+  --alert-font-color: black;
 }
